fixing issue with scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -435,7 +435,7 @@ ul.menu__links li a {
   min-width: 350px;
   margin-top: 70px;
   height: calc(100% - 70px);
-  background-color: var(--background-secondary-dm);
+  background-color: var(--background-dm);
 }
 
 .chat-box {
@@ -501,7 +501,7 @@ ul.menu__links li a {
 
 /* ---Add color change on mouse wheel scroll --- */
 ::-webkit-scrollbar-track {
-  background: var(--background-secondary-dm);
+  background: var(--background-dm);
 }
 
 ::-webkit-scrollbar-thumb {
@@ -784,3 +784,75 @@ button {
     margin-top: 50px;
   }
 }
+
+
+
+/* .dashboard h2 {
+  display: inherit;
+.dashboard__title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+  padding-bottom: 20px;
+  padding-bottom: 30px;
+  color: var(--background-lm);
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 400;
+  font-size: 25px;
+}
+
+.dashboard h4 {
+@@ -724,26 +728,19 @@ button {
+  padding: 1rem 4rem;
+}
+
+@media screen and (max-width: 450px) {
+  .confirm {
+    width: 300px;
+    left: calc(50% - 150px);
+  }
+}
+
+@media screen and (max-width: 700px) {
+  ul.menu__links li a,
+  .menu__btn {
+    font-size: 20px;
+  }
+
+  .dashboard h2 {
+    font-size: 15px;
+  }
+
+  .login__container {
+    width: unset;
+  }
+
+  .dashboard__title {
+    margin-top: 50px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+@@ -754,5 +751,19 @@ button {
+  .send-message {
+    width: 100%;
+  }
+
+  .dashboard h2 {
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .confirm {
+    width: 300px;
+    left: calc(50% - 150px);
+  }
+
+  .dashboard h2 {
+    font-size: 25px;
+  }
+} */
